Fix HTML encoding issues in Index.html

--- a/Index.html
+++ b/Index.html
@@ -230,7 +230,7 @@ function flor() {
 }
 
 function fotoAleatoria() {
-    const img = document.createElement("img");
+    const img = document.createElement("img/");
     img.className = "foto";
     let ext = (foto === 3 || foto === 4) ? ".jpeg" : ".jpg";
     img.src = "img/" + foto + ext;
@@ -255,4 +255,5 @@ function palabra() {
 
 </body>
 </html>
+
 
