Refactor HTML structure and styles

--- a/prueva.html
+++ b/prueva.html
@@ -232,19 +232,14 @@ function flor() {
 function fotoAleatoria() {
     const img = document.createElement("img");
     img.className = "foto";
-
     let ext = (foto === 3 || foto === 4) ? ".jpeg" : ".jpg";
-    img.src = "Img/" + foto + ext;
-
-    img.style.left = Math.random() * 80 + "%";
-    img.style.top = Math.random() * 80 + "%";
-
+    img.src = "img/" + foto + ext;
+    img.style.left = Math.random()*80+"%";
+    img.style.top = Math.random()*80+"%";
     escena.appendChild(img);
 
     foto++;
     if (foto > 108) foto = 1;
-}
-
 }
 
 function palabra() {
@@ -260,8 +255,3 @@ function palabra() {
 
 </body>
 </html>
-
-
-
-
-
