--- a/prueva.html
+++ b/prueva.html
@@ -173,9 +173,9 @@ const escena = document.getElementById("escena");
 const musica = document.getElementById("musica");
 
 const palabras = [
-    "Te amo", "Mi vida", "Mi amor", "Eres única",
-    "Siempre tú", "Mi corazón", "Para siempre"
-];
+    "Te amo❤️", "Mi vida", "Mi amor", "Eres única",
+    "Siempre tú", "Mi corazón", "Para siempre", "05/12/2025", "18/11/2025", "Eres lo mejor que me ha pasado", "Mi mulixita", "preciosa❤️" , "Mami😍", "Chula😘", "Me encantas"
+;
 
 const colores = ["#ff4d6d","#ffcc00","#ff8c42","#c77dff","#ff6f91"];
 let foto = 1;
@@ -210,7 +210,7 @@ function mostrarTeAmo() {
     const t = document.createElement("div");
     t.className = "teamo";
     t.textContent = "TE AMO";
-    t.style.left = "50%";
+    t.style.left = "10%";
     t.style.top = "50%";
     t.style.transform = "translate(-50%,-50%)";
     escena.appendChild(t);
@@ -255,3 +255,4 @@ function palabra() {
 
 </body>
 </html>
+
