Enhance Index.html with audio and style updates
Added audio playback functionality and improved styling.

--- a/Index.html
+++ b/Index.html
@@ -135,6 +135,9 @@ button:hover {
 
 <body>
 
+<!-- 🎵 AUDIO (NO AUTOPLAY) -->
+<audio id="musica" src="musica/23.mp3" loop></audio>
+
 <div class="centro" id="inicio">
     <div class="caja">
         <p>
@@ -167,10 +170,11 @@ button:hover {
 
 <script>
 const escena = document.getElementById("escena");
+const musica = document.getElementById("musica");
 
 const palabras = [
-    "Te amo", "Mi vida", "Mi amor", "Eres única","05/12/2025","Mulixita❤️","Mi mujer","Me encatas",
-    "Siempre tú", "Mi corazón", "Para siempre", "Estoy muy orgulloso de ti" , "Ereslo mejemor que me ha pasado" , "18/11/2025"
+     "Te amo❤️", "Mi vida", "Mi amor", "Eres única",
+    "Siempre tú", "Mi corazón", "Para siempre", "05/12/2025", "18/11/2025", "Eres lo mejor que me ha pasado", "Mi mulixita", "preciosa❤️" , "Mami😍", "Chula😘", "Me encantas"
 ];
 
 const colores = ["#ff4d6d","#ffcc00","#ff8c42","#c77dff","#ff6f91"];
@@ -188,6 +192,11 @@ function volver() {
 
 function responderSi() {
     document.getElementById("inicio").remove();
+
+    // 🎵 INICIAR MÚSICA
+    musica.volume = 0.7;
+    musica.play();
+
     mostrarTeAmo();
 
     setTimeout(() => {
@@ -201,7 +210,7 @@ function mostrarTeAmo() {
     const t = document.createElement("div");
     t.className = "teamo";
     t.textContent = "TE AMO";
-    t.style.left = "50%";
+    t.style.left = "30%";
     t.style.top = "50%";
     t.style.transform = "translate(-50%,-50%)";
     escena.appendChild(t);
@@ -232,6 +241,7 @@ function fotoAleatoria() {
     foto++;
     if (foto > 108) foto = 1;
 }
+
 
 function palabra() {
     const p = document.createElement("div");
