--- a/Index.html
+++ b/Index.html
@@ -232,14 +232,17 @@ function flor() {
 function fotoAleatoria() {
     const img = document.createElement("img");
     img.className = "foto";
-    let ext = (foto === 3 || foto === 4) ? ".jpeg" : ".jpg";
-    img.src = "img/" + foto + ext;
-    img.style.left = Math.random()*80+"%";
-    img.style.top = Math.random()*80+"%";
+
+    img.src = `img/${foto}.jpg`;
+    img.style.left = Math.random() * 80 + "%";
+    img.style.top = Math.random() * 80 + "%";
+
     escena.appendChild(img);
 
     foto++;
     if (foto > 108) foto = 1;
+}
+
 }
 
 
@@ -256,3 +259,4 @@ function palabra() {
 
 </body>
 </html>
+
