Fix HTML encoding issues in Index.html

--- a/Index.html
+++ b/Index.html
@@ -219,12 +219,12 @@ function flor(){
 }
 
 function fotoAleatoria(){
-    const img=document.createElement("img");
+    const img=document.createElement("Img");
     img.className="foto";
-    img.src=`img/${foto}.jpg`;
+    img.src=`Img/${foto}.jpg`;
     img.style.left=Math.random()*80+"%";
     img.style.top=Math.random()*80+"%";
-    escena.appendChild(img);
+    escena.appendChild(Img);
 
     foto++;
     if(foto>108) foto=1;
@@ -243,3 +243,4 @@ function palabra(){
 
 </body>
 </html>
+
