--- a/Index.html
+++ b/Index.html
@@ -244,7 +244,7 @@ function flor() {
 }
 
 function fotoAleatoria() {
-    const img = document.createElement("img");
+    const img = document.createElement("Img");
     img.className = "foto";
     let ext = (foto === 3 || foto === 4) ? ".jpeg" : ".jpg";
     img.src = "Img/" + foto + ext;
@@ -500,5 +500,6 @@ function palabra(){
 
 </body>
 </html>
+
 
 
